--- a/css/main.css
+++ b/css/main.css
@@ -14,20 +14,21 @@ body {
     background-color: #fff;
 }
 
-
+/*body { margin:0; padding:0; }*/
+.mapboxgl-canvas { position:relative !important; top:0; bottom:0; width:100%; }
+.mapboxgl-popup {
+/*max-width: 400px;*/
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
 
 .input_check {
  display:none;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+.popup-title{
+  
 }
 
-header {
-  height: 10vh;
-}
 .container{
 }
 
@@ -57,7 +58,7 @@ margin-top:100px;
 padding:1%;
 */
 overflow-y: auto;
-max-height: 82vh;
+max-height: 85vh;
 }
 
 .right{
@@ -70,7 +71,7 @@ max-height: 82vh;
 /*margin-right: 2%;*/
 /*right:2%;*/
 
-height: 82vh;
+height: 85vh;
 }
 
 
@@ -221,14 +222,15 @@ background-color:#3399CC;
 #map3d #balooncontent {
    max-width: 330px;
 }
+
 div.box{
-  max-width: 400px;
+  max-width: 420px;
   padding-left: 10px;
   padding-right: 10px;
   margin-top: 0px;
   text-align: justify;
   font-size: 13px;
-  width:385px;
+  width:420px;
 }
 
 div.box h3 {
